# tubi-recommendations

./: .gitignore  README.md  demo.py  main.py  pyproject.toml
cfgs/: extrinsic.yml  intrinsic.yml
data/: content_dataset.py  user_dataset.py
data/process/: tmdb_ratings.py  tubi_processed.csv
data/raw/: tubi_raw.csv
model/: embeddings.py  extrinsic.py  intrinsic.py
src/: recommend.py  train_extrinsic.py  train_intrinsic.py
