[project]
name = "tubi-ml"
version = "0.1.0"
description = "Tubi Recommendation System from scratch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipython>=8.38.0",
    "keybert>=0.9.0",
    "matplotlib>=3.7.0",
    "model2vec>=0.7.0",
    "polars>=1.38.1",
    "requests>=2.32.5",
    "seaborn>=0.12.0",
    "tqdm>=4.67.3",
]
